--- a/app/src/main/res/layout/activity_buy_machine.xml
+++ b/app/src/main/res/layout/activity_buy_machine.xml
@@ -21,6 +21,14 @@
         app:tl_textSelectColor="@color/color_2d2d2d"
         app:tl_textUnselectColor="@color/color_747474" />
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:background="@color/dy_color_divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
