--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="color_f64b25">#F64B25</color>
     <color name="color_131C25">#131C25</color>
     <color name="color_fbb100">#FBB100</color>
+    <color name="color_d8d8d8">#D8D8D8</color>
 </resources>
