--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="color_131C25">#131C25</color>
     <color name="color_fbb100">#FBB100</color>
     <color name="color_d8d8d8">#D8D8D8</color>
+    <color name="color_black">#000000</color>
 </resources>
