--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,18 @@
         <item name="android:layout_height">46dp</item>
         <item name="android:layout_width">match_parent</item>
     </style>
+
+    <style name="BottomDialog" parent="android:Theme.Dialog">
+        <item name="android:windowFrame">@null</item><!--边框 -->
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上 -->
+        <item name="android:windowBackground">@android:color/transparent</item><!--背景透明 -->
+        <item name="android:windowNoTitle">true</item><!--无标题 -->
+        <item name="android:backgroundDimEnabled">true</item><!--背景亮 -->
+        <item name="android:windowAnimationStyle">@style/BottomDialogAnim</item>
+    </style>
+
+    <style name="BottomDialogAnim">
+        <item name="android:windowEnterAnimation">@anim/anim_dialog_bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/anim_dialog_bottom_out</item>
+    </style>
 </resources>
