--- a/app/src/main/res/layout/activity_exchange.xml
+++ b/app/src/main/res/layout/activity_exchange.xml
@@ -76,14 +76,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginBottom="20dp"
             android:text="请选择地址"
             android:textColor="@color/color_bbbbbb"
             android:textSize="14sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/iv_arrow_address"
             app:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -130,6 +132,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="24dp"
+            android:scaleType="centerInside"
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintEnd_toStartOf="@id/tv_title"
             app:layout_constraintHorizontal_weight="86"
