--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,8 @@
     <color name="color_fbb100">#FBB100</color>
     <color name="color_d8d8d8">#D8D8D8</color>
     <color name="color_black">#000000</color>
+    <color name="color_4d4d4d">#4D4D4D</color>
+    <color name="color_ff6e6f">#FF6E6F</color>
+    <color name="color_0f63fd">#0F63FD</color>
+    <color name="color_2b47f3">#2B47F3</color>
 </resources>
